--- a/src/css/_theme_var_orverrides.css
+++ b/src/css/_theme_var_orverrides.css
@@ -18,6 +18,7 @@
   --ifm-toc-border-color: var(--color-yellow);
   --ifm-toc-link-color: var(--color-blue);
   --ifm-menu-link-sublist-icon: url('/img/arrow-blue.svg');
+  --ifm-link-color: var(--color-blue);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -32,4 +33,5 @@
   --ifm-navbar-background-color: var(--color-black);
   --ifm-font-family-base: 'IBM Plex Mono';
   --ifm-font-color-base: var(--color-yellow);
+  --ifm-link-color: var(--color-blue);
 }
