fix: Fix issue when opening transcription the screen scrolling down
Also fix an arrow appearing on summaries in Safari.

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -22,6 +22,15 @@
     background-color: var(--color-black);
     max-width: 100vw;
     overflow-x: hidden;
+    height: auto !important;
+  }
+
+  /** hides an arrow that appears on safari for summaries **/
+  details > summary {
+    list-style: none;
+  }
+  details > summary::-webkit-details-marker {
+    display: none;
   }
 
   html[data-theme='dark'],
