redo folder and final structure

--- a/src/css/_sidebar.css
+++ b/src/css/_sidebar.css
@@ -19,6 +19,7 @@ aside .menu__link--sublist-caret:after {
   align-items: center;
   display: flex;
   filter: none;
+  rotate: 90deg;
 }
 
 aside .menu__list {
@@ -66,6 +67,7 @@ aside .menu__list-item--collapsed .menu__list {
 aside .menu__list-item--collapsed .menu__link--sublist:after {
   transform: rotateZ(0deg);
 }
+
 
 aside .menu__link--active:hover {
   color: var(--color-blue);
