--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -1,48 +1,35 @@
-html.docs-only body {
+html.plugin-docs.plugin-id-default body {
   background-color: #1C1C1C;
 }
 
 
 
-html.docs-only .navbar {
+html.plugin-docs.plugin-id-default .navbar {
   border-bottom: 2px solid var(--color-yellow);
   height: fit-content;
   padding-bottom: 0px;
   padding-left: 0px;
   padding-right: 0px;
   padding-top: 0px;
-  background-color: #1C1C1C;
+  background-color: black
 }
 
-html.docs-only .navbar__item {
-    font-size: 1.5rem;
-    padding-bottom: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 0px;
-}
-
-html.docs-only .navbar__items {
-align-items: center;
-}
-
-html.docs-only .navbar__logo {
+html.plugin-docs.plugin-id-default .navbar__logo {
     margin-bottom: 1.5rem;
     margin-left: 1.5rem;
+    margin-top: 1.5rem; 
     height: 1.5rem;
 }
 
-html.docs-only .navbar,
-.main-wrapper {
-  width: 100%;
+html.plugin-docs.plugin-id-default .navbar__link {
+  padding-bottom: 2rem;
 }
 
-html.docs-only #__docusaurus {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+html.plugin-docs.plugin-id-default .navbar__link:active {
+  padding-bottom: 2rem;
 }
 
-html.docs-only .navbar-sidebar
+html.plugin-docs.plugin-id-default .navbar-sidebar
   .navbar-sidebar__item:last-child
   .clean-btn.navbar-sidebar__back::before {
   display: inline-block;
@@ -51,32 +38,32 @@ html.docs-only .navbar-sidebar
   position: relative;
 }
 
-html.docs-only aside .menu__link {
+html.plugin-docs.plugin-id-default aside .menu__link {
   color: var(--ifm-menu-color);
   padding-top: 0rem;
   padding-bottom: 0rem;
   height: 18px;
 }
 
-html.docs-only aside aside .menu__link {
+html.plugin-docs.plugin-id-default aside aside .menu__link {
   padding-left: 0;
 }
 
-html.docs-only aside aside .menu__link li a {
+html.plugin-docs.plugin-id-default aside aside .menu__link li a {
   padding-left: 0;
 }
 
-html.docs-only aside aside .menu__link--active {
+html.plugin-docs.plugin-id-default aside aside .menu__link--active {
   padding-left: 0;
 }
 
-html.docs-only .thin-scrollbar {
+html.plugin-docs.plugin-id-default .thin-scrollbar {
   color: white;
   letter-spacing: 1px;
   margin-top: 24px;
 }
 
-html.docs-only aside .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-styles-module {
+html.plugin-docs.plugin-id-default aside .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-styles-module {
     top: auto;
 }
 
@@ -173,47 +160,46 @@ article .markdown p code {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html.docs-only .thin-scrollbar ul li a {
+html.plugin-docs.plugin-id-default .thin-scrollbar ul li a {
   color: white;
 }
 
-/* html.docs-only article header h1 {
-  font-weight: var(--typography-h1-d-font-weight);
-  font-size: var(--typography-h1-d-font-size);
-  line-height: var(--typography-h1-d-line-height);
-  letter-spacing: 1px;
-  color: var(--color-yellow)
-} */
 
-html.docs-only article time {
+html.plugin-docs.plugin-id-default article time {
   color: white;
 }
 
-html.docs-only .avatar {
+html.plugin-docs.plugin-id-default .avatar {
   color: white;
 }
 
-html.docs-only .navbar__link {
+html.plugin-docs.plugin-id-default .navbar__link {
   font-size: 18px;
+  padding-bottom: 2rem;
 }
 
-html.docs-only .navbar__link:hover {
+
+html.plugin-docs.plugin-id-default .navbar__link:hover {
+  border-bottom: 4px solid var(--color-yellow);
+  color: var(--color-yellow);
+  padding-bottom: 2rem;
+}
+
+html.plugin-docs.plugin-id-default .navbar__link--active {
+  border-bottom: 4px solid var(--color-yellow);
+  color: var(--color-yellow);
+  padding-bottom: 2rem;
+}
+
+html.plugin-docs.plugin-id-default .thin-scrollbar ul li a:hover {
   color: var(--color-yellow);
 }
 
-html.docs-only .navbar__link--active {
+html.plugin-docs.plugin-id-default .sidebarItemLinkActive_node_modules-\@docusaurus-theme-classic-lib-next-theme-BlogSidebar-styles-module {
   color: var(--color-yellow);
 }
 
-.thin-scrollbar ul li a:hover {
-  color: var(--color-yellow);
-}
-
-.sidebarItemLinkActive_node_modules-\@docusaurus-theme-classic-lib-next-theme-BlogSidebar-styles-module {
-  color: var(--color-yellow);
-}
-
-article h2 {
+html.plugin-docs.plugin-id-default article h2 {
   color: var(--color-yellow);
 }
 /* 
@@ -222,8 +208,8 @@ article h2 {
 } */
 
 
-ul.table-of-contents li a code,
-ul.table-of-contents li code {
+html.plugin-docs.plugin-id-default ul.table-of-contents li a code,
+html.plugin-docs.plugin-id-default ul.table-of-contents li code {
   background-color: transparent;
 }
 
@@ -233,7 +219,7 @@ ul.table-of-contents li code {
 .table-of-contents__link--active code {
   color: var(--color-yellow);
   text-decoration: none;
-  font-weight: 700 !important;
+  text-decoration: underline !important;
 }
 
 .table-of-contents__link {
@@ -246,106 +232,22 @@ ul.table-of-contents li code {
 
 .table-of-contents li {
   margin: 0.75rem 1.5rem;
+  list-style: none !important;
 }
 
 .table-of-contents__link {
   font-size: 0.875rem;
   font-weight: 500;
   line-height: 1.375rem;
+  text-decoration: none !important;
 }
 
 .table-of-contents__left-border {
-  border-left: 1px solid var(--color-white);
+  border-left: 1px solid gray !important;
 }
 
 .table-of-contents__left-border li {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-/* API docs */
-
-html.docs-doc-id\/index body {
-  background-color: #1C1C1C;
-}
-
-html.docs-doc-id\/index .navbar {
-  border-bottom: 2px solid var(--color-yellow);
-  height: fit-content;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-top: 0px;
-  background-color: #1C1C1C;
-}
-
-html.docs-doc-id\/index .navbar__item {
-    font-size: 1.5rem;
-    padding-bottom: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 0px;
-}
-
-html.docs-doc-id\/index .navbar__items {
-    align-items: center;
-}
-
-html.docs-doc-id\/index .navbar__logo {
-    margin-bottom: 1.5rem;
-    margin-left: 1.5rem;
-    height: 1.5rem;
-    margin-top: 1.5rem;
-}
-
-html.docs-doc-id\/index .navbar,
-.main-wrapper {
-  width: 100%;
-}
-
-html.docs-doc-id\/index #__docusaurus {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-html.docs-doc-id\/index .navbar-sidebar
-  .navbar-sidebar__item:last-child
-  .clean-btn.navbar-sidebar__back::before {
-  display: inline-block;
-  content: url('/img/arrow-yellow.svg');
-  position: relative;
-}
-
-html.docs-doc-id\/index aside .menu__link {
-  color: var(--ifm-menu-color);
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  height: 18px;
-}
-
-html.docs-doc-id\/index aside aside .menu__link {
-  padding-left: 0;
-}
-
-html.docs-doc-id\/index aside aside .menu__link li a {
-  padding-left: 0;
-}
-
-html.docs-doc-id\/index aside aside .menu__link--active {
-  padding-left: 0;
-}
-
-html.docs-doc-id\/index .thin-scrollbar {
-  color: white;
-  letter-spacing: 1px;
-  margin-top: 24px;
-}
-
-html.docs-doc-id\/index aside .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-styles-module {
-    top: auto;
-}
-
-.theme-doc-sidebar-container {
-  border-right: 1px solid gray !important;
 }
