--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -1,3 +1,7 @@
+.pagination-nav {
+  display: none;
+}
+
 html.plugin-docs.plugin-id-default body {
   background-color: #1C1C1C;
 }
@@ -272,4 +276,10 @@ html.plugin-docs.plugin-id-default .table-of-contents__left-border li {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Redocusaurus */
+.redocusaurus {
+  overflow: auto;
+  height: 95vh;
 }
