--- a/src/css/_prose.css
+++ b/src/css/_prose.css
@@ -8,7 +8,7 @@
   font-weight: 900;
 }
 
-.prose.prose-pink code {
+/* .prose.prose-pink code {
   color: var(--color-black) !important;
 }
 
@@ -30,7 +30,7 @@
 .prose.prose-pink a:hover code {
   color: var(--color-black) !important;
   text-decoration: none;
-}
+} */
 
 .prose.prose-pink
   :where(tbody td:first-child):not(:where([class~='not-prose'] *)) {
