--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,8 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'layout.css';
+@import 'docs.css';
+@import 'navbar.css';
+@import 'sidebar.css';
+@import 'text.css';
+@import 'prose.css';
+
 /* You can override the default Infima variables here. */
 :root {
+  --color-black: #000000;
+  --color-yellow: #ffec19;
+  --color-blue: #24f2ff;
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -17,12 +27,14 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #ffec19;
+  --ifm-color-primary-dark: #fce700;
+  --ifm-color-primary-darker: #eeda00;
+  --ifm-color-primary-darkest: #c4b400;
+  --ifm-color-primary-light: #ffee35;
+  --ifm-color-primary-lighter: #ffef43;
+  --ifm-color-primary-lightest: #fff36d;
+  --ifm-background-color: #000000;
+  --ifm-navbar-background-color: #000000;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
