--- a/old/src/css/base.css
+++ b/old/src/css/base.css
@@ -46,4 +46,12 @@
   a:hover {
     text-decoration: none;
   }
+
+  h1 {
+    font-size: 2.5rem;
+    line-height: 3.5rem;
+    font-weight: 700;
+    letter-spacing: -0.02em;
+    margin-bottom: 1.5rem;
+  }
 }
