--- a/src/css/text.css
+++ b/src/css/text.css
@@ -1,5 +1,8 @@
-h1, h2, h3, h4, h5, h6 {
+header {
     color: var(--color-yellow);
-    font-family: 'IBM Plex Mono', monospace;
-    font-weight: 700;
+}
+
+.avatar__name::before {
+    content: "Posted by ";
+    color: var(--color-yellow);
 }
