--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -8,7 +8,7 @@
   font-weight: 900;
 }
 
-/* .prose.prose-pink code {
+.prose.prose-pink code {
   color: var(--color-black) !important;
 }
 
@@ -30,7 +30,7 @@
 .prose.prose-pink a:hover code {
   color: var(--color-black) !important;
   text-decoration: none;
-} */
+}
 
 .prose.prose-pink
   :where(tbody td:first-child):not(:where([class~='not-prose'] *)) {
@@ -55,19 +55,22 @@
 .prose.prose-pink hr {
   height: 2px;
   border-width: 0;
-  background-image: url('/img/divider-dotted-dark.svg');
+  background-image: url('/static/img/divider-dotted-dark.svg');
 }
 
 .prose.prose-pink hr.bg-dotted-dark {
   height: 2px;
   border-width: 0;
-  background-image: url('/img/divider-dotted-dark.svg');
+  background-image: url('/static/img/divider-dotted-dark.svg');
 }
 
 .prose.prose-pink hr.bg-slash-dark {
   height: 8px;
   border-width: 0;
-  background-image: url('/img/divider-slash-dark.svg');
+  background-image: url('/static/img/divider-slash-dark.svg');
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  background-color: transparent;
 }
 
 .prose :where(code):not(:where([class~='not-prose'] *)):before,
