--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -286,6 +286,7 @@ aside .menu__link {
   padding-bottom: 0rem;
   height: 18px;
   background-color: transparent !important;
+  text-decoration: none;
 }
 
 aside .menu__link--active {
