--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,7 +4,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
 
-
 @import 'text.css';
 @import 'prose.css';
 @import 'variables.css';
@@ -14,7 +13,6 @@
 @import 'sidebar.css';
 @import 'illustration.css';
 
-
 /* You can override the default Infima variables here. */
 :root {
   --color-black: #000000;
@@ -23,38 +21,43 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 700;
-    margin-bottom: 1.5rem;
-    color: var(--color-yellow);
-    font-family: 'IBM Plex Mono', monospace;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+  color: var(--color-yellow);
+  font-family: 'IBM Plex Mono', monospace;
+}
 
 h1 {
   font-size: 56px;
   line-height: 70px;
 }
-  h2 {
-    font-size: 2rem;
-  }
+h2 {
+  font-size: 2rem;
+}
 
-  h3 {
-    font-size: 1.5rem;
-  }
+h3 {
+  font-size: 1.5rem;
+}
 
-  a {
-    color: var(--color-blue);
-    text-decoration: underline;
-  }
+a {
+  color: var(--color-blue);
+  text-decoration: underline;
+}
 
-  a:hover {
-    text-decoration: none;
-  }
+a:hover {
+  text-decoration: none;
+}
 
-  button {
-    font-weight: 700;
-  }
-  
+button {
+  font-weight: 700;
+}
+
 @layer base {
   :root {
     --base: 16px;
@@ -68,15 +71,14 @@ h1 {
 
     --max-page-width: 1440px;
   }
-  
+
   .copy {
     @apply text-lg;
   }
 
   .h2-caps {
-    @apply uppercase font-heading text-2xl
+    @apply uppercase font-heading text-2xl;
   }
-
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -94,7 +96,6 @@ h1 {
   --ifm-heading-font-family: 'IBM Plex Mono', monospace;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
-
 
 /* Horrible confusing code below */
 .docusaurus-highlight-code-line {
@@ -130,7 +131,6 @@ ul.table-of-contents li code {
   font-weight: 500;
   line-height: 1.375rem;
 }
-
 
 .pagination-nav__sublabel {
   display: none;
@@ -410,8 +410,6 @@ nav .pagination-nav__link {
   padding-right: 0.5rem !important;
 }
 
-
-
 /* Docs */
 
 aside.col.col--3 nav {
@@ -471,8 +469,16 @@ ul.breadcrumbs {
   width: auto;
 }
 
+footer a {
+  text-decoration: none;
+  font-weight: 500;
+}
 
 footer a {
-text-decoration: none;
-font-weight: 500;
+  padding-bottom: 2rem;
+}
+
+footer a:hover {
+  border-bottom: 4px solid var(--color-yellow);
+  color: var(--color-yellow);
 }
